--- a/Practice_Assignment.ipynb
+++ b/Practice_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMyEgkyGAxDGBzVIINjIWAu",
+      "authorship_tag": "ABX9TyP8LRBHrZ1FfvCK/5uzElBR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,47 +29,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dskaUcITjfkp",
-        "outputId": "b6e6324b-00ae-40de-b6e1-199cddefa685"
+        "id": "dskaUcITjfkp"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter month (e.g., January, February, March, April, May, June): January\n",
-            "Enter month electricity usage (in kwh): 80\n",
-            "Enter gas usage (in cubic meters): 100\n",
-            "Enter month water usage (in cubic meters): 110\n",
-            "Enter month (e.g., January, February, March, April, May, June): February\n",
-            "Enter month electricity usage (in kwh): 98\n",
-            "Enter gas usage (in cubic meters): 105\n",
-            "Enter month water usage (in cubic meters): 100\n",
-            "Enter month (e.g., January, February, March, April, May, June): March\n",
-            "Enter month electricity usage (in kwh): 100\n",
-            "Enter gas usage (in cubic meters): 108\n",
-            "Enter month water usage (in cubic meters): 100\n",
-            "Enter month (e.g., January, February, March, April, May, June): April\n",
-            "Enter month electricity usage (in kwh): 95\n",
-            "Enter gas usage (in cubic meters): 98\n",
-            "Enter month water usage (in cubic meters): 115\n",
-            "Enter month (e.g., January, February, March, April, May, June): May\n",
-            "Enter month electricity usage (in kwh): 110\n",
-            "Enter gas usage (in cubic meters): 120\n",
-            "Enter month water usage (in cubic meters): 118\n",
-            "Enter month (e.g., January, February, March, April, May, June): June\n",
-            "Enter month electricity usage (in kwh): 125\n",
-            "Enter gas usage (in cubic meters): 128\n",
-            "Enter month water usage (in cubic meters): 130\n",
-            "Data collection completed successfully.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import csv\n",
         "\n",
@@ -139,27 +103,10 @@
         "        print(row)"
       ],
       "metadata": {
-        "id": "PEeKRdkW0CQI",
-        "outputId": "255103a7-3dcd-416a-c584-af1b40fe9bc7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "PEeKRdkW0CQI"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['January', '80.0', '100.0', '110.0']\n",
-            "['February', '98.0', '105.0', '100.0']\n",
-            "['March', '100.0', '108.0', '100.0']\n",
-            "['April', '95.0', '98.0', '115.0']\n",
-            "['May', '110.0', '120.0', '118.0']\n",
-            "['June', '125.0', '128.0', '130.0']\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -184,25 +131,10 @@
         "print(\"water_usage:\", water_usage)\n"
       ],
       "metadata": {
-        "id": "kA8xcgMI58B_",
-        "outputId": "08e58018-7d8f-4abb-87be-1a5960cb26a0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "kA8xcgMI58B_"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "month: ['February', 'March', 'April', 'May', 'June']\n",
-            "electricity_usage: [98.0, 100.0, 95.0, 110.0, 125.0]\n",
-            "gas_usage: [105.0, 108.0, 98.0, 120.0, 128.0]\n",
-            "water_usage: [100.0, 100.0, 115.0, 118.0, 130.0]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -243,13 +175,28 @@
         "    plt.figure(figsize=(10, 6))\n",
         "    plt.bar(['Electricity', 'Gas', 'Water'], [sum(electricity_usage), sum(gas_usage), sum(water_usage)])\n",
         "    plt.title('consumtion of energy types by consumtion' )\n",
-        "    plt.plot(electricity_usage, label='Electricity Usage (kwh)')\n",
-        "    plt.plot(gas_usage, label='Gas Usage (cubic meters)')"
+        "    plt.xlabel('Energy Type')\n",
+        "    plt.ylabel('Consumption')\n",
+        "    plt.grid(axis='y')\n",
+        "    plt.show()\n",
+        "\n",
+        "def annual_energy_consumption(electricity_usage, gas_usage, water_usage):\n",
+        "    \"\"\"plot annual total consumption breakdown by energy type.\"\"\"\n",
+        "    level = ['electricity', 'gas', 'water']\n",
+        "    size = [sum(electricity_usage), sum(gas_usage), sum(water_usage)]\n",
+        "    plt.figure(figsize=(10, 6))\n",
+        "    plt.pie(size, labels=level, autopct='%1.1f%%')\n",
+        "    plt.title('Annual total Consumption breakdown by energy type')\n",
+        "    plt.axis('equal')\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "e7yuXp4C-q1n"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     }
   ]
