--- a/Practice_Assignment.ipynb
+++ b/Practice_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8LRBHrZ1FfvCK/5uzElBR",
+      "authorship_tag": "ABX9TyOBbmxvFiZdZyOviMCInpb1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,6 +190,34 @@
         "    plt.axis('equal')\n",
         "    plt.tight_layout()\n",
         "    plt.show()\n",
+        "\n",
+        "\n",
+        "def main ():\n",
+        "    file_name = 'monthly_energy_consumption.csv'\n",
+        "    months, electricity_usage, gas_usage, water_usage = load_data(file_name)\n",
+        "\n",
+        "    while True:\n",
+        "      print (\"\\nMenu Options:\")\n",
+        "      print (\"1. Plot monthly energy consumtion trends\")\n",
+        "      print (\"2. Plot consumption of energy types by consumption\")\n",
+        "      print (\"3. Plot annual total consumption breakdown by energy type\")\n",
+        "      print (\"4. Exit\")\n",
+        "      choice = input(\"Enter your choice (1/2/3/4): \")\n",
+        "      if choice == '1':\n",
+        "        monthly_consumtion_trends(months, electricity_usage, gas_usage, water_usage)\n",
+        "      elif choice == '2':\n",
+        "          comparison_energy_types(electricity_usage, gas_usage, water_usage)\n",
+        "      elif choice == '3':\n",
+        "          annual_consumption_breakdown(electricity_usage, gas_usage, water_usage)\n",
+        "      elif choice == '4':\n",
+        "            print(\"Exiting the program.\")\n",
+        "            break\n",
+        "      else:\n",
+        "          print(\"Invalid choice. Please enter a number from 1 to 4.\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n",
+        "\n",
         "\n",
         "\n"
       ],
