--- a/Practice_Assignment.ipynb
+++ b/Practice_Assignment.ipynb
@@ -29,11 +29,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "dskaUcITjfkp"
+        "id": "dskaUcITjfkp",
+        "outputId": "f0920fcd-6700-469d-d848-b83530dbe69d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter month (e.g., January, February, March, April, May, June): January\n",
+            "Enter month electricity usage (in kwh): 225\n",
+            "Enter gas usage (in cubic meters): 240\n",
+            "Enter month water usage (in cubic meters): 200\n",
+            "Enter month (e.g., January, February, March, April, May, June): Febuary\n",
+            "Invalid month. please enter a valid month name.\n",
+            "Enter month (e.g., January, February, March, April, May, June): February\n",
+            "Enter month electricity usage (in kwh): 280\n",
+            "Enter gas usage (in cubic meters): 300\n",
+            "Enter month water usage (in cubic meters): 310\n",
+            "Enter month (e.g., January, February, March, April, May, June): March\n",
+            "Enter month electricity usage (in kwh): 405\n",
+            "Enter gas usage (in cubic meters): 380\n",
+            "Enter month water usage (in cubic meters): 355\n",
+            "Enter month (e.g., January, February, March, April, May, June): April\n",
+            "Enter month electricity usage (in kwh): 395\n",
+            "Enter gas usage (in cubic meters): 375\n",
+            "Enter month water usage (in cubic meters): 330\n",
+            "Enter month (e.g., January, February, March, April, May, June): May \n",
+            "Enter month electricity usage (in kwh): 375\n",
+            "Enter gas usage (in cubic meters): 390\n",
+            "Enter month water usage (in cubic meters): 400\n",
+            "Enter month (e.g., January, February, March, April, May, June): June\n",
+            "Enter month electricity usage (in kwh): 350\n",
+            "Enter gas usage (in cubic meters): 410\n",
+            "Enter month water usage (in cubic meters): 425\n",
+            "Data collection completed successfully.\n"
+          ]
+        }
+      ],
       "source": [
         "import csv\n",
         "\n",
@@ -103,10 +141,27 @@
         "        print(row)"
       ],
       "metadata": {
-        "id": "PEeKRdkW0CQI"
+        "id": "PEeKRdkW0CQI",
+        "outputId": "91cdbea9-2c24-475b-ca78-e08b6e35f0e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['January', '225.0', '240.0', '200.0']\n",
+            "['February', '280.0', '300.0', '310.0']\n",
+            "['March', '405.0', '380.0', '355.0']\n",
+            "['April', '395.0', '375.0', '330.0']\n",
+            "['May', '375.0', '390.0', '400.0']\n",
+            "['June', '350.0', '410.0', '425.0']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -131,10 +186,25 @@
         "print(\"water_usage:\", water_usage)\n"
       ],
       "metadata": {
-        "id": "kA8xcgMI58B_"
+        "id": "kA8xcgMI58B_",
+        "outputId": "eb341da5-df5a-45cc-a88d-381969d9487d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "month: ['February', 'March', 'April', 'May', 'June']\n",
+            "electricity_usage: [280.0, 405.0, 395.0, 375.0, 350.0]\n",
+            "gas_usage: [300.0, 380.0, 375.0, 390.0, 410.0]\n",
+            "water_usage: [310.0, 355.0, 330.0, 400.0, 425.0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
